--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,2 +1,78 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400|Yeseva+One");
+* {
+  box-sizing: border-box; }
+
 body {
-  background-color: lightblue; }
+  margin: 0; }
+
+h1 {
+  text-align: center;
+  margin: 20px auto 20px auto;
+  font-family: 'Yeseva One', cursive;
+  font-size: 45px; }
+
+figure {
+  position: relative;
+  cursor: pointer; }
+  figure img {
+    width: 284px;
+    height: 42px; }
+
+figcaption {
+  text-decoration: none;
+  position: absolute;
+  top: 0;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  margin: 8px 0 0 20px; }
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 0 auto 20px auto; }
+
+.greet_big {
+  display: none;
+  visibility: hidden;
+  text-align: center;
+  margin: 0; }
+
+@media screen and (min-width: 844px) {
+  .wrapper {
+    flex-direction: row;
+    flex-wrap: wrap; }
+  h1 {
+    margin: 20px auto 40px auto; }
+  figure {
+    position: relative; }
+    figure img {
+      cursor: pointer;
+      width: 342px;
+      height: 51px; }
+  .greet {
+    display: none;
+    visibility: hidden; }
+  .greet_big {
+    display: block;
+    visibility: visible;
+    text-align: center;
+    margin: 20px auto 20px auto; } }
+
+@media screen and (min-width: 1072px) {
+  .wrapper {
+    width: 100%;
+    flex-direction: wrap;
+    margin: 0 auto; }
+  figure {
+    position: relative; }
+    figure img {
+      cursor: pointer;
+      width: 456px;
+      height: 68px; }
+  figcaption {
+    font-size: 30px;
+    margin: 18px 0 0 23px; } }
