--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -195,6 +195,126 @@ progress {
   .website {
     margin: 600px 0 0 0; } }
 
+.contain_vid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 10px 0 0 0; }
+  .contain_vid iframe {
+    width: 375px;
+    height: 190px; }
+
+@media screen and (min-width: 768px) {
+  .contain_vid {
+    margin: 200px 0 0 0; }
+    .contain_vid iframe {
+      width: 700px;
+      height: 400px; } }
+
+@media screen and (min-width: 1024px) {
+  .contain_vid {
+    margin: 200px 0 0 0; }
+    .contain_vid iframe {
+      width: 900px;
+      height: 500px; } }
+
+.pic_wrap img {
+  width: 100%;
+  height: auto;
+  max-width: 1000px;
+  max-height: 500px; }
+
+.overlay {
+  position: fixed;
+  margin: 0 auto;
+  width: 100%;
+  height: 800px;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 100; }
+
+@media screen and (min-width: 768px) {
+  .pic_wrap {
+    margin: 200px 0 0 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; }
+    .pic_wrap div {
+      margin: 10px 30px 10px 30px;
+      cursor: pointer; }
+    .pic_wrap img {
+      width: auto;
+      height: auto;
+      max-height: 250px;
+      transition: 300ms all; }
+    .pic_wrap img:hover {
+      filter: contrast(0.8) brightness(0.9); }
+  .overlay {
+    position: fixed;
+    margin: 0 auto;
+    width: 100%;
+    height: 800px;
+    background: rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 100; }
+  .overlay:target {
+    visibility: visible;
+    opacity: 1; }
+  .popup {
+    margin: 100px 0 0 0;
+    border-radius: 5px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 5s ease-in-out; }
+  .popup .close {
+    position: absolute;
+    top: -5px;
+    right: 20px;
+    transition: all 200ms;
+    font-size: 45px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #FFF; }
+  .contain_arrows {
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed; }
+  .right_next {
+    width: 45px;
+    height: 45px;
+    margin-left: 20px;
+    position: fixed; }
+    .right_next i {
+      color: #FFF; }
+  .left_next {
+    width: 45px;
+    height: 45px;
+    position: fixed;
+    margin-left: -74px; }
+    .left_next i {
+      color: #FFF; }
+  .popup .close:hover {
+    color: #D3D3D3;
+    transform: scale(1.3); }
+  .popup {
+    overflow: auto;
+    color: #000; }
+  .popup img {
+    width: 85%;
+    height: auto;
+    max-width: 1000px;
+    max-height: 575px; } }
+
 * {
   box-sizing: border-box; }
 
