--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -473,7 +473,17 @@ progress {
 
 .pic_wrap img {
   width: 100%;
-  margin: 30px 0 30px 0; }
+  margin: 30px 0 30px 0;
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards; }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 .overlay {
   position: fixed;
