--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -395,14 +395,24 @@ progress {
   margin: 420px 0 0 0; }
   .website div {
     border: solid 3px white;
-    height: 50px; }
-  .website h5 {
-    font-family: 'Abel', sans-serif;
-    font-size: 30px;
-    padding: 15px;
-    font-weight: 300;
-    color: white;
-    margin: 0 auto; }
+    cursor: pointer;
+    background-color: black;
+    height: 50px;
+    display: inline-block;
+    transition-duration: 0.3s;
+    transition-property: transform;
+    -webkit-tap-highlight-color: transparent;
+    transform: translateZ(0);
+    box-shadow: 0 0 1px transparent; }
+    .website div h5 {
+      font-family: 'Abel', sans-serif;
+      font-size: 30px;
+      padding: 15px;
+      font-weight: 300;
+      color: white;
+      margin: -9px auto; }
+    .website div:hover {
+      transform: skew(-20deg); }
 
 @media screen and (min-width: 768px) {
   .white_box {
